--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -36,6 +36,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
     
+    - name: Free up disk space
+      run: |
+        echo "Cleaning up space..."
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo apt clean
+        df -h
+    
     - name: Setup build environment
       run: |
         sudo apt update && sudo apt install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev openjdk-8-jdk python3 libtinfo5 libstdc++6
@@ -50,12 +57,17 @@ jobs:
         git config --global user.name "lazycodebuilder"
         git config --global user.email "154446636+lazycodebuilder@users.noreply.github.com"
         repo init --depth=1 -u https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${{ inputs.MANIFEST_BRANCH }}
-        repo sync -j$(nproc --all) --force-sync
+        repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
     
     - name: Clone Device Tree
       run: |
         cd android-recovery/device
         git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} realme/samurai
+    
+    - name: Enable ccache
+      run: |
+        export USE_CCACHE=1
+        ccache -M 5G
     
     - name: Build Recovery
       run: |
