--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -36,11 +36,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
     
-    - name: Free up disk space
+    - name: Aggressively Free Up Disk Space
       run: |
         echo "Cleaning up space..."
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo apt clean
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc $AGENT_TOOLSDIRECTORY
+        sudo apt-get clean
+        docker system prune -a -f
         df -h
     
     - name: Setup build environment
@@ -57,7 +58,7 @@ jobs:
         git config --global user.name "lazycodebuilder"
         git config --global user.email "154446636+lazycodebuilder@users.noreply.github.com"
         repo init --depth=1 -u https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${{ inputs.MANIFEST_BRANCH }}
-        repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+        repo sync -c -j$(nproc --all) --force-sync --optimized-fetch --no-clone-bundle --no-tags
     
     - name: Clone Device Tree
       run: |
@@ -67,7 +68,7 @@ jobs:
     - name: Enable ccache
       run: |
         export USE_CCACHE=1
-        ccache -M 5G
+        ccache -M 10G
     
     - name: Build Recovery
       run: |
