--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -71,12 +71,11 @@ jobs:
         FILE=android-recovery/device/realme/samurai/AndroidProducts.mk
         if [ ! -f "$FILE" ]; then
           echo "Creating AndroidProducts.mk"
-          echo "PRODUCT_MAKEFILES := \" > $FILE
-          echo "    \$(LOCAL_DIR)/twrp_samurai.mk" >> $FILE
-          echo "COMMON_LUNCH_CHOICES := \" >> $FILE
-          echo "    twrp_samurai-eng \" >> $FILE
-          echo "    twrp_samurai-user \" >> $FILE
-          echo "    twrp_samurai-userdebug" >> $FILE
+          cat <<EOF > $FILE
+        PRODUCT_MAKEFILES := \n            \$(LOCAL_DIR)/twrp_samurai.mk
+        
+        COMMON_LUNCH_CHOICES := \n            twrp_samurai-eng \n            twrp_samurai-user \n            twrp_samurai-userdebug
+        EOF
         fi
     
     - name: Enable ccache
