--- a/.github/workflows/twrp_brady_8.0.yml
+++ b/.github/workflows/twrp_brady_8.0.yml
@@ -17,7 +17,7 @@ on:
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
-        default: 'main'
+        default: 'twrp-8.0'
       BUILD_TARGET:
         description: 'Specify your Build Target'
         required: true
